objects/Phone_SFDC2__c.object
<CustomObject>
    <description>SFDC2 Phone objects are used to allow storing an unlimited number of current and historical phone numbers for Leads, Business Accounts and Personal Accounts.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Phones</relationshipLabel>
        <relationshipName>Phones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Belongs_To__c</fullName>
        <description>Who the number belongs to according to the phone bill</description>
        <inlineHelpText>Who the number belongs to according to the phone bill</inlineHelpText>
        <label>Belongs To</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Phones</relationshipLabel>
        <relationshipName>Phones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Status__c</fullName>
        <label>Phone Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unverified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Bad</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Home</fullName>
                </value>
                <value>
                    <fullName>Primary Business</fullName>
                </value>
                <value>
                    <fullName>Primary Mobile</fullName>
                </value>
                <value>
                    <fullName>Primary Fax</fullName>
                </value>
                <value>
                    <fullName>Other Home</fullName>
                    <default>true</default>
                    <label>Other Home</label>
                </value>
                <value>
                    <fullName>Other Business</fullName>
                </value>
                <value>
                    <fullName>Other Mobile</fullName>
                </value>
                <value>
                    <fullName>Other Fax</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>JH Cell</fullName>
                </value>
                <value>
                    <fullName>JH Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SQL_ID__c</fullName>
        <externalId>true</externalId>
        <label>SQL ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Phone</label>
    <nameField>
        <displayFormat>PHN-{0000}</displayFormat>
        <label>Phone Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phones</pluralLabel>
    <recordTypes>
        <fullName>Account_Phone</fullName>
        <active>true</active>
        <label>Account Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Phone</fullName>
        <active>true</active>
        <label>Lead Phone</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Business_Phones</fullName>
        <active>true</active>
        <description>Prevent Phone objects on business accounts from having primary home or mobile numbers</description>
        <errorConditionFormula>IF( !ISNULL( Account__c)
    &amp;&amp; !Account__r.IsPersonAccount 
    &amp;&amp; LEFT( Account__r.Account_Type_SFDC2__c ,2) != &apos;JH&apos;
    &amp;&amp; (TEXT(Phone_Type__c) == &apos;Primary Mobile&apos;
        || TEXT(Phone_Type__c) == &apos;Primary Home&apos;), 
  true
,
  false
)</errorConditionFormula>
        <errorDisplayField>Phone_Type__c</errorDisplayField>
        <errorMessage>Business accounts can not have primary mobile or home numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JH_Customer</fullName>
        <active>true</active>
        <description>Prevent primary phone numbers from being updated on JH accounts</description>
        <errorConditionFormula>IF( !ISNULL( Account__c )
    &amp;&amp; LEFT( Account__r.Account_Type_SFDC2__c, 2 ) == &apos;JH&apos;
    &amp;&amp; LEFT(  RecordType.DeveloperName , 7 ) == &apos;Primary&apos;,
  true
,
  false
)</errorConditionFormula>
        <errorMessage>Primary phone numbers on accounts with JH customer records must be updated in JH.</errorMessage>
    </validationRules>
</CustomObject>